@@ -131,5 +131,13 @@
     <adapter
         factory=".utils.MegaphoneFormTemplateVariableValidator"
         />
+    
+    <!-- control panel -->
+    <browser:page
+        name="megaphone-defaults"
+        for="Products.CMFCore.interfaces.ISiteRoot"
+        class=".controlpanel.MegaphoneDefaultsWizardView"
+        permission="collective.megaphone.ControlPanel"
+        />
 
 </configure>
