@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel" meta_type="Plone Control Panel Tool"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n" i18n:domain="plone">
+ <configlet title="Megaphone Defaults" action_id="megaphone defaults"
+            appId="collective.megaphone" category="Products" condition_expr=""
+            url_expr="string:${portal_url}/@@megaphone-defaults"
+            visible="True" i18n:attributes="title">
+    <permission>Plone Site Setup: Megaphone</permission>
+ </configlet>
+</object>
