@@ -1,3 +1,5 @@
+from persistent import Persistent
+from zope.app.component.hooks import getSite
 from zope.i18nmessageid import MessageFactory
 
 DOMAIN = 'collective.megaphone'
@@ -16,3 +18,19 @@ def implementedOrProvidedBy(anInterface, anObject):
         return anInterface.providedBy(anObject)
     else:
         return anInterface.isImplementedBy(anObject)
+
+
+class MegaphoneSettings(Persistent):
+    def __init__(self, base={}):
+        data = {}
+        data.update(base)
+        if 'step' in data:
+            del data['step']
+        self.data = data
+
+
+def get_megaphone_defaults():
+    return getattr(getSite(), '_megaphone_defaults', MegaphoneSettings()).data
+
+def set_megaphone_defaults(defaults):
+    getSite()._megaphone_defaults = MegaphoneSettings(defaults)
