@@ -4,6 +4,10 @@ Changelog
 2.1b3 (unreleased)
 ------------------
 
+* Added a control panel in Site Setup to configure default values that will
+  be used for new Megaphones.
+  [davisagli]
+
 * Fix javascript error affecting IE.
   [davisagli]
 
